--- a/src/main/resources/org/uludag/bmb/gui/mainScene.fxml
+++ b/src/main/resources/org/uludag/bmb/gui/mainScene.fxml
@@ -49,7 +49,7 @@
 <?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.uludag.bmb.gui.mainSceneController">
+<VBox prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.uludag.bmb.controller.mainSceneController">
   <children>
     <MenuBar VBox.vgrow="NEVER">
       <menus>
