--- a/src/main/resources/org/uludag/bmb/gui/startupScene.fxml
+++ b/src/main/resources/org/uludag/bmb/gui/startupScene.fxml
@@ -33,17 +33,13 @@
 -->
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ProgressIndicator?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.effect.Light.Distant?>
-<?import javafx.scene.effect.Lighting?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
-
 
 <VBox prefHeight="400.0" prefWidth="378.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.uludag.bmb.controller.gui.StartupSceneController">
   <children>
@@ -56,14 +52,14 @@
             </Label>
             <Button fx:id="btnLogin" layoutX="14.0" layoutY="116.0" mnemonicParsing="false" onMouseClicked="#startOAuth" text="Giriş Yap" />
             <Button fx:id="btnChoosePath" layoutX="14.0" layoutY="158.0" mnemonicParsing="false" onMouseClicked="#chooseLocalPath" text="Dizin Seç" />
-            <Text layoutX="105.0" layoutY="136.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Giriş Durumu:">
+            <Text layoutX="105.0" layoutY="136.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Dropbox Bağlantısı:">
                <font>
                   <Font size="16.0" />
                </font>
             </Text>
-            <CheckBox id="check-box" fx:id="chkBloginState" layoutX="223.0" layoutY="117.0" mnemonicParsing="false" />
             <Button id="btnDone" layoutX="158.0" layoutY="294.0" mnemonicParsing="false" onMouseClicked="#finishStartup" text="TAMAM" />
             <TextField fx:id="chosenPath" layoutX="105.0" layoutY="160.0" prefHeight="26.0" prefWidth="241.0" />
+            <ProgressIndicator fx:id="dbState" layoutX="271.0" layoutY="107.0" prefHeight="48.0" prefWidth="41.0" />
          </children>
     </AnchorPane>
   </children>
