--- a/src/main/resources/org/uludag/bmb/gui/startupScene.fxml
+++ b/src/main/resources/org/uludag/bmb/gui/startupScene.fxml
@@ -41,7 +41,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox prefHeight="400.0" prefWidth="378.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.uludag.bmb.controller.gui.StartupSceneController">
+<VBox prefHeight="400.0" prefWidth="378.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
   <children>
     <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="400.0" prefWidth="338.0" VBox.vgrow="ALWAYS">
          <children>
@@ -58,7 +58,7 @@
                </font>
             </Text>
             <Button id="btnDone" layoutX="158.0" layoutY="294.0" mnemonicParsing="false" onMouseClicked="#finishStartup" text="TAMAM" />
-            <TextField fx:id="chosenPath" layoutX="105.0" layoutY="160.0" prefHeight="26.0" prefWidth="241.0" />
+            <TextField fx:id="chosenPath" editable="false" layoutX="105.0" layoutY="160.0" prefHeight="26.0" prefWidth="214.0" />
             <ProgressIndicator fx:id="dbState" layoutX="271.0" layoutY="107.0" prefHeight="48.0" prefWidth="41.0" />
          </children>
     </AnchorPane>
