--- a/src/main/resources/org/uludag/bmb/gui/test.fxml
+++ b/src/main/resources/org/uludag/bmb/gui/test.fxml
@@ -32,6 +32,7 @@
   OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 -->
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
@@ -41,55 +42,58 @@
 <?import javafx.scene.control.TreeView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
 
-<VBox fillWidth="false" prefHeight="673.0" prefWidth="1188.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
+<VBox fillWidth="false" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
   <children>
-      <AnchorPane prefHeight="776.0" prefWidth="1188.0" VBox.vgrow="ALWAYS">
+      <AnchorPane style="-fx-background-color: white;" VBox.vgrow="ALWAYS">
          <children>
-          <SplitPane dividerPositions="0.2505567928730512, 0.7505567928730512" focusTraversable="true" prefHeight="681.0" prefWidth="1188.0">
+          <SplitPane cacheShape="false" centerShape="false" dividerPositions="0.2505567928730512, 0.7505567928730512" focusTraversable="false" nodeOrientation="LEFT_TO_RIGHT" scaleShape="false" style="-fx-background-color: white;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <items>
-              <AnchorPane maxWidth="220.0" minWidth="100.0" prefHeight="679.0" prefWidth="220.0" SplitPane.resizableWithParent="false">
+              <AnchorPane maxWidth="250.0" minWidth="110.0" prefWidth="220.0" style="-fx-background-color: #f7f5f2;" SplitPane.resizableWithParent="false">
                 <children>
-                  <Label alignment="CENTER" layoutX="14.0" layoutY="14.0" minWidth="60.0" prefHeight="21.0" prefWidth="200.0" style="&#10;" text="Dosya Dizinleri" textAlignment="CENTER" wrapText="false">
+                  <Label alignment="CENTER" layoutX="14.0" layoutY="14.0" minWidth="60.0" prefHeight="21.0" prefWidth="200.0" style="&#10;" text="Dosya Dizinleri" textAlignment="CENTER" wrapText="false" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="6.0">
                     <font>
                       <Font size="18.0" fx:id="x1" />
                     </font>
-                    <textFill>
-                      <Color red="0.624" green="0.624" blue="0.624" fx:id="x2" />
-                    </textFill>
                   </Label>
-                        <TreeView fx:id="treeView" layoutY="55.0" onMouseClicked="#selectItem" prefHeight="330.0" prefWidth="241.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="55.0" />
+                        <TreeView fx:id="treeView" layoutY="86.0" onMouseClicked="#selectItem" prefHeight="232.0" prefWidth="200.0" style="-fx-background-color: #fbfaf9;" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="86.0" />
                 </children>
               </AnchorPane>
-            <AnchorPane id="Content" minHeight="-1.0" minWidth="-1.0" prefHeight="545.0" prefWidth="310.0">
+            <AnchorPane id="Content" minHeight="-1.0" minWidth="400.0" style="-fx-background-color: white;">
               <children>
-                        <Button fx:id="btnUpload" layoutX="14.0" layoutY="22.0" mnemonicParsing="false" onAction="#uploadItem" prefHeight="25.0" prefWidth="95.0" style="-fx-background-color: cyan; -fx-border-color: black;" text="UPLOAD" textAlignment="CENTER" textOverrun="CENTER_ELLIPSIS" AnchorPane.topAnchor="22.0" />
-                        <Button fx:id="btnDownload" layoutX="121.0" layoutY="22.0" mnemonicParsing="false" onAction="#downloadItem" prefHeight="25.0" prefWidth="95.0" style="-fx-background-color: lightgreen; -fx-border-color: black;" text=" Download" textFill="WHITE" AnchorPane.topAnchor="22.0" />
-                        <TabPane fx:id="tabPane" layoutY="56.0" prefHeight="623.0" prefWidth="587.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="55.0">
+                        <Button id="upload" fx:id="btnUpload" layoutX="14.0" layoutY="22.0" mnemonicParsing="false" onAction="#uploadItem" prefHeight="25.0" prefWidth="95.0" styleClass="btnMainMenu" text="UPLOAD" textAlignment="CENTER" textOverrun="CENTER_ELLIPSIS" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="22.0" />
+                        <Button id="download" fx:id="btnDownload" layoutX="121.0" layoutY="22.0" mnemonicParsing="false" onAction="#downloadItem" prefHeight="25.0" prefWidth="95.0" styleClass="btnMainMenu" text=" Download" textFill="WHITE" AnchorPane.topAnchor="22.0" />
+                        <TabPane fx:id="tabPane" layoutX="8.0" layoutY="56.0" prefHeight="623.0" prefWidth="792.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="3.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="55.0">
                           <tabs>
-                            <Tab text="Online Dosyalar">
+                            <Tab id="tab1" closable="false" text="Online Dosyalar">
                               <content>
-                                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" styleClass="tabPane">
                                        <children>
-                                          <ListView fx:id="cloudListView" layoutX="14.0" layoutY="14.0" prefHeight="415.0" prefWidth="565.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                                          <ListView fx:id="cloudListView" layoutX="6.0" layoutY="14.0" prefHeight="593.0" prefWidth="774.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                                        </children>
                                     </AnchorPane>
                               </content>
                             </Tab>
-                            <Tab text="Lokal Dosyalar">
+                            <Tab id="tab2" closable="false" text="Yerel Dosyalar">
                               <content>
-                                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" styleClass="tabPane">
+                                       <children>
+                                          <ListView fx:id="localListView" prefHeight="593.0" prefWidth="766.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                                       </children>
+                                    </AnchorPane>
                               </content>
                             </Tab>
                           </tabs>
                         </TabPane>
               </children>
+                     <padding>
+                        <Insets left="5.0" right="5.0" />
+                     </padding>
             </AnchorPane>
-              <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="200.0" minWidth="100.0" prefHeight="679.0" prefWidth="255.0" SplitPane.resizableWithParent="false">
+              <AnchorPane cache="true" maxHeight="1.7976931348623157E308" maxWidth="220.0" minWidth="110.0" prefWidth="220.0" SplitPane.resizableWithParent="false">
                 <children>
-                  <Label alignment="CENTER" font="$x1" layoutX="14.0" layoutY="14.0" prefHeight="21.0" prefWidth="152.0" style="&#10;" text="Dosya Detayları" textAlignment="CENTER" textFill="#5d00ff" wrapText="false" />
+                  <Label alignment="CENTER" font="$x1" layoutX="14.0" layoutY="14.0" prefHeight="21.0" prefWidth="152.0" style="&#10;" text="Dosya Detayları" textAlignment="CENTER" wrapText="false" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="34.0" AnchorPane.topAnchor="14.0" />
                 </children>
               </AnchorPane>
             </items>
