--- a/src/main/resources/org/uludag/bmb/gui/mainScene.fxml
+++ b/src/main/resources/org/uludag/bmb/gui/mainScene.fxml
@@ -35,93 +35,71 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.SeparatorMenuItem?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TreeView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
 
-<VBox fillWidth="false" prefHeight="594.0" prefWidth="944.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
+<VBox fillWidth="false" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
   <children>
-    <MenuBar VBox.vgrow="NEVER">
-      <menus>
-        <Menu mnemonicParsing="false" text="File">
-          <items>
-            <MenuItem mnemonicParsing="false" text="New" />
-            <MenuItem mnemonicParsing="false" text="Open…" />
-            <Menu mnemonicParsing="false" text="Open Recent" />
-            <SeparatorMenuItem mnemonicParsing="false" />
-            <MenuItem mnemonicParsing="false" text="Close" />
-            <MenuItem mnemonicParsing="false" text="Save" />
-            <MenuItem mnemonicParsing="false" text="Save As…" />
-            <MenuItem mnemonicParsing="false" text="Revert" />
-            <SeparatorMenuItem mnemonicParsing="false" />
-            <MenuItem mnemonicParsing="false" text="Preferences…" />
-            <SeparatorMenuItem mnemonicParsing="false" />
-            <MenuItem mnemonicParsing="false" text="Quit" />
-          </items>
-        </Menu>
-      </menus>
-    </MenuBar>
-    <SplitPane dividerPositions="0.2505567928730512, 0.7505567928730512" focusTraversable="true" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
-      <items>
-        <AnchorPane>
-          <children>
-            <Label alignment="CENTER" layoutX="14.0" layoutY="14.0" minWidth="60.0" prefWidth="-1.0" style="&#10;" text="Master" textAlignment="CENTER" wrapText="false">
-              <font>
-                <Font size="18.0" fx:id="x1" />
-              </font>
-              <textFill>
-                <Color red="0.624" green="0.624" blue="0.624" fx:id="x2" />
-              </textFill>
-            </Label>
-                  <TreeView fx:id="treeView" layoutX="11.0" layoutY="76.0" onMouseClicked="#selectItem" prefHeight="200.0" prefWidth="200.0" />
-          </children>
-        </AnchorPane>
-        <ScrollPane prefWidth="554.0">
-          <content>
-            <AnchorPane id="Content" minHeight="-1.0" minWidth="-1.0" prefHeight="545.0" prefWidth="470.0">
+      <AnchorPane style="-fx-background-color: white;" VBox.vgrow="ALWAYS">
+         <children>
+          <SplitPane cacheShape="false" centerShape="false" dividerPositions="0.2505567928730512, 0.7505567928730512" focusTraversable="false" nodeOrientation="LEFT_TO_RIGHT" scaleShape="false" style="-fx-background-color: white;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <items>
+              <AnchorPane maxWidth="250.0" minWidth="110.0" prefWidth="220.0" style="-fx-background-color: #f7f5f2;" SplitPane.resizableWithParent="false">
+                <children>
+                  <Label alignment="CENTER" layoutX="14.0" layoutY="14.0" minWidth="60.0" prefHeight="21.0" prefWidth="200.0" style="&#10;" text="Dosya Dizinleri" textAlignment="CENTER" wrapText="false" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="6.0">
+                    <font>
+                      <Font size="18.0" fx:id="x1" />
+                    </font>
+                  </Label>
+                        <TreeView fx:id="treeView" layoutX="10.0" layoutY="58.0" onMouseClicked="#hierarchySelectFolder" prefHeight="299.0" prefWidth="230.0" style="-fx-background-color: #fbfaf9;" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="58.0" />
+                </children>
+              </AnchorPane>
+            <AnchorPane id="Content" minHeight="-1.0" minWidth="400.0" style="-fx-background-color: white;">
               <children>
-                        <Button fx:id="btnUpload" layoutX="14.0" layoutY="22.0" mnemonicParsing="false" style="-fx-background-color: cyan; -fx-border-color: black;" text="UPLOAD" textAlignment="CENTER" textOverrun="CENTER_ELLIPSIS" />
-                        <Button fx:id="btnDownload" layoutX="94.0" layoutY="23.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="94.0" style="-fx-background-color: lightgreen; -fx-border-color: black;" text=" Download" textFill="WHITE" />
-                        <TreeView fx:id="showFiles" layoutX="14.0" layoutY="73.0" onMouseClicked="#downloadFile" prefHeight="462.0" prefWidth="428.0" />
-                        <Button fx:id="btnUpload" layoutX="14.0" layoutY="22.0" mnemonicParsing="false" onAction="#uploadItem" style="-fx-background-color: cyan; -fx-border-color: black;" text="UPLOAD" textAlignment="CENTER" textOverrun="CENTER_ELLIPSIS" />
-                        <Button fx:id="btnDownload" layoutX="94.0" layoutY="23.0" mnemonicParsing="false" onAction="#downloadItem" prefHeight="25.0" prefWidth="94.0" style="-fx-background-color: lightgreen; -fx-border-color: black;" text=" Download" textFill="WHITE" />
+                        <Button id="upload" fx:id="btnUpload" layoutX="14.0" layoutY="59.0" mnemonicParsing="false" onAction="#uploadItem" prefHeight="25.0" prefWidth="95.0" styleClass="btnMainMenu" text="UPLOAD" textAlignment="CENTER" textOverrun="CENTER_ELLIPSIS" AnchorPane.leftAnchor="9.0" AnchorPane.topAnchor="59.0" />
+                        <Button id="download" fx:id="btnDownload" layoutX="116.0" layoutY="59.0" mnemonicParsing="false" onAction="#downloadItem" prefHeight="25.0" prefWidth="95.0" styleClass="btnMainMenu" text=" Download" textFill="WHITE" AnchorPane.topAnchor="59.0" />
+                        <TabPane fx:id="tabPane" layoutX="8.0" layoutY="56.0" prefHeight="623.0" prefWidth="792.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="3.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="90.0">
+                          <tabs>
+                            <Tab id="tab1" closable="false" text="Online Dosyalar">
+                              <content>
+                                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" styleClass="tabPane">
+                                       <children>
+                                          <ListView fx:id="cloudListView" layoutX="6.0" layoutY="14.0" onMouseClicked="#listSelectFiles" prefHeight="593.0" prefWidth="774.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                                       </children>
+                                    </AnchorPane>
+                              </content>
+                            </Tab>
+                            <Tab id="tab2" closable="false" text="Yerel Dosyalar">
+                              <content>
+                                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" styleClass="tabPane">
+                                       <children>
+                                          <ListView fx:id="localListView" prefHeight="593.0" prefWidth="766.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                                       </children>
+                                    </AnchorPane>
+                              </content>
+                            </Tab>
+                          </tabs>
+                        </TabPane>
+                        <Label layoutX="14.0" layoutY="10.0" prefHeight="40.0" prefWidth="58.0" text="Label" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="10.0" />
               </children>
+                     <padding>
+                        <Insets left="5.0" right="5.0" />
+                     </padding>
             </AnchorPane>
-          </content>
-        </ScrollPane>
-        <AnchorPane prefHeight="545.0" prefWidth="376.0">
-          <children>
-            <Label alignment="CENTER" font="$x1" layoutX="14.0" layoutY="14.0" style="&#10;" text="Details" textAlignment="CENTER" textFill="$x2" wrapText="false" />
-          </children>
-        </AnchorPane>
-      </items>
-    </SplitPane>
-    <HBox id="HBox" alignment="CENTER_LEFT" spacing="5.0" VBox.vgrow="NEVER">
-      <children>
-        <Label maxHeight="1.7976931348623157E308" maxWidth="-1.0" text="Left status" HBox.hgrow="ALWAYS">
-          <font>
-            <Font size="11.0" fx:id="x3" />
-          </font>
-          <textFill>
-            <Color red="0.625" green="0.625" blue="0.625" fx:id="x4" />
-          </textFill>
-        </Label>
-        <Pane prefHeight="-1.0" prefWidth="-1.0" HBox.hgrow="ALWAYS" />
-        <Label font="$x3" maxWidth="-1.0" text="Right status" textFill="$x4" HBox.hgrow="NEVER" />
-      </children>
-      <padding>
-        <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
-      </padding>
-    </HBox>
+              <AnchorPane cache="true" maxHeight="1.7976931348623157E308" maxWidth="220.0" minWidth="110.0" prefWidth="220.0" SplitPane.resizableWithParent="false">
+                <children>
+                  <Label alignment="CENTER" font="$x1" layoutX="14.0" layoutY="14.0" prefHeight="21.0" prefWidth="152.0" style="&#10;" text="Dosya Detayları" textAlignment="CENTER" wrapText="false" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="34.0" AnchorPane.topAnchor="14.0" />
+                </children>
+              </AnchorPane>
+            </items>
+          </SplitPane>
+         </children>
+      </AnchorPane>
   </children>
 </VBox>
