--- a/src/main/resources/org/uludag/bmb/fxml/mainScene.fxml
+++ b/src/main/resources/org/uludag/bmb/fxml/mainScene.fxml
@@ -87,9 +87,9 @@
                                        <contextMenu>
                                           <ContextMenu>
                                             <items>
-                                                <MenuItem fx:id="ctwMenuShare" mnemonicParsing="false" text="Paylaş" />
-                                                <MenuItem fx:id="ctwMenuDownload" mnemonicParsing="false" text="İndir" />
-                                                <MenuItem fx:id="ctwMenuDelete" mnemonicParsing="false" text="Sil" />
+                                                <MenuItem fx:id="ctwMenuShare" mnemonicParsing="false" onAction="#shareFile" text="Paylaş" />
+                                                <MenuItem fx:id="ctwMenuDownload" mnemonicParsing="false" onAction="#downloadItem" text="İndir" />
+                                                <MenuItem fx:id="ctwMenuDelete" mnemonicParsing="false" onAction='#deleteFile' text="Sil" />
                                             </items>
                                           </ContextMenu>
                                        </contextMenu>
